
* SOLR-17113: Correct how `/replication?command=details` describes errors in backup operations.  (Przemyslaw Ciezkowski via Christine Poerschke and Jason Gerlowski)

* SOLR-17200: Fix false positive race condition in `/health?requireHealthyCores=true` during core loading (hossman)

* SOLR-17218: Fix indexFetcher logging to include MDC details (hossman)

Dependency Upgrades
---------------------

* SOLR-17157: Upgrade Lucene to 9.10.0 (hossman, Christine Poerschke)

* SOLR-17214: Update forbiddenapis to 3.7 (hossman)

Other Changes
---------------------
* SOLR-17126: Cut over System.getProperty to EnvUtils.getProperty (janhoy)

* SOLR-17066: GenericSolrRequest now has a `setRequiresCollection` setter that allows it to specify whether
  it should make use of the client-level default collection/core. (Jason Gerlowski)

* SOLR-17190: Replace org.apache.solr.util.LongSet with hppc LongHashSet (Michael Gibney)

* SOLR-12089: Update FileBasedSpellChecker and IndexBasedSpellChecker to accept accuracy parameter
  as float; deprecate `breakSugestionTieBreaker` parameter in favor of `breakSuggestionTieBreaker`
  in WordBreakSolrSpellChecker (Andrey Bozhko via Eric Pugh)

* SOLR-17201: Http2SolrClient and friends no longer marked as @lucene.experimental.
  Krb5HttpClientBuilder and PreemptiveBasicAuthClientBuilderFactory no longer deprecated (janhoy)

* SOLR-17217: Simplify verbose MatcherAssert.assertThat usage in tests (hossman)

==================  9.5.0 ==================
New Features
---------------------
* SOLR-17006: Collection creation & adding replicas: User-defined properties are persisted to state.json and
  applied to new replicas, available for use as property substitution in configuration files.  (Vincent Primault)

* SOLR-16986: Log CPU time per request via solr.log.cputime (Gilles Bellaton, David Smiley)

* SOLR-16974: Circuit Breakers can now be configured globally (janhoy, Christine Poerschke)
